Based on Jumpto scroll fix, added icons to user menu and, icons/phone and address from issue1 branch, partly jumpto and chart title was applied

--- a/app/assets/stylesheets/explore.css.less
+++ b/app/assets/stylesheets/explore.css.less
@@ -595,6 +595,7 @@
   /* move the subtitle closer to the title */
   .highcharts-title{
     text-align:center;
+    margin-top: 8px !important;
   }
 
   /* Map Styling */
